@@ -19,11 +19,11 @@ package org.apache.jackrabbit.oak.benchmark;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
 import java.util.Collections;
+import java.util.Set;
 import javax.jcr.RepositoryException;
 import javax.jcr.Session;
 import javax.security.auth.Subject;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.core.security.SystemPrincipal;
 import org.apache.jackrabbit.oak.jcr.repository.RepositoryImpl;
 import org.apache.jackrabbit.oak.spi.security.authentication.SystemSubject;
@@ -38,7 +38,7 @@ public class LoginSystemTest extends AbstractLoginTest {
         if (getRepository() instanceof RepositoryImpl) {
             subject = SystemSubject.INSTANCE;
         } else {
-            subject = new Subject(true, ImmutableSet.of(new SystemPrincipal()), Collections.emptySet(), Collections.emptySet());
+            subject = new Subject(true, Set.of(new SystemPrincipal()), Collections.emptySet(), Collections.emptySet());
         }
     }
 
