@@ -45,11 +45,7 @@ import org.apache.jackrabbit.oak.spi.query.Filter.PropertyRestriction;
 import org.apache.jackrabbit.oak.spi.query.QueryIndex;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 
-import org.apache.jackrabbit.guava.common.base.Function;
-import org.apache.jackrabbit.guava.common.base.Predicate;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Iterables;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 
 /**
  * Provides a QueryIndex that does lookups for node references based on a custom
@@ -100,7 +96,7 @@ class ReferenceIndex implements QueryIndex {
         // not an appropriate index
         return POSITIVE_INFINITY;
     }
-    
+
     private static boolean isEqualityRestrictionOnType(PropertyRestriction pr, int propertyType) {
         if (pr.propertyType != propertyType) {
             return false;
@@ -132,27 +128,17 @@ class ReferenceIndex implements QueryIndex {
         if (!indexRoot.exists()) {
             return newPathCursor(new ArrayList<String>(), filter.getQueryLimits());
         }
-        List<Iterable<String>> iterables = Lists.newArrayList();
+        List<Iterable<String>> iterables = new ArrayList<>();
         for (IndexStoreStrategy s : getStrategies(indexRoot, mountInfoProvider, index)) {
             iterables.add(s.query(filter, index + "("
-                    + uuid + ")", indexRoot, ImmutableSet.of(uuid)));
+                    + uuid + ")", indexRoot, Set.of(uuid)));
         }
         Iterable<String> paths = Iterables.concat(iterables);
 
         if (!"*".equals(name)) {
-            paths = filter(paths, new Predicate<String>() {
-                @Override
-                public boolean apply(String path) {
-                    return name.equals(getName(path));
-                }
-            });
+            paths = filter(paths, path -> name.equals(getName(path)));
         }
-        paths = transform(paths, new Function<String, String>() {
-            @Override
-            public String apply(String path) {
-                return getParentPath(path);
-            }
-        });
+        paths = transform(paths, path -> getParentPath(path));
         return newPathCursor(paths, filter.getQueryLimits());
     }
 
