@@ -20,6 +20,7 @@ import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.security.Principal;
 import java.util.Map;
+import java.util.Set;
 import javax.jcr.ImportUUIDBehavior;
 import javax.jcr.Node;
 import javax.jcr.Repository;
@@ -252,9 +253,9 @@ public class L4_CustomAccessControlManagementTest extends AbstractSecurityTest {
 
         TreeUtil.addMixin(aTree, ThreeRolesConstants.MIX_REP_THREE_ROLES_POLICY, root.getTree(NodeTypeConstants.NODE_TYPES_PATH), null);
         Tree rolePolicy = TreeUtil.addChild(aTree, ThreeRolesConstants.REP_3_ROLES_POLICY, ThreeRolesConstants.NT_REP_THREE_ROLES_POLICY);
-        rolePolicy.setProperty(ThreeRolesConstants.REP_READERS, ImmutableSet.of("principalR", EveryonePrincipal.NAME), Type.STRINGS);
-        rolePolicy.setProperty(ThreeRolesConstants.REP_EDITORS, ImmutableSet.of("principalE",getTestUser().getPrincipal().getName()), Type.STRINGS);
-        rolePolicy.setProperty(ThreeRolesConstants.REP_OWNERS,  ImmutableSet.of("principalO"), Type.STRINGS);
+        rolePolicy.setProperty(ThreeRolesConstants.REP_READERS, Set.of("principalR", EveryonePrincipal.NAME), Type.STRINGS);
+        rolePolicy.setProperty(ThreeRolesConstants.REP_EDITORS, Set.of("principalE",getTestUser().getPrincipal().getName()), Type.STRINGS);
+        rolePolicy.setProperty(ThreeRolesConstants.REP_OWNERS,  Set.of("principalO"), Type.STRINGS);
 
         // add one node outside the scope of the supported path
         Tree outside = TreeUtil.addChild(root.getTree("/"), "outside", NodeTypeConstants.NT_OAK_UNSTRUCTURED);
@@ -360,7 +361,7 @@ public class L4_CustomAccessControlManagementTest extends AbstractSecurityTest {
                 pm.getPrincipal("principalO"), ThreeRolesConstants.SUPPORTED_PERMISSIONS
         );
         for (Principal principal : m.keySet()) {
-            PermissionProvider pp = getConfig(AuthorizationConfiguration.class).getPermissionProvider(root, adminSession.getWorkspaceName(), ImmutableSet.of(principal));
+            PermissionProvider pp = getConfig(AuthorizationConfiguration.class).getPermissionProvider(root, adminSession.getWorkspaceName(), Set.of(principal));
             assertTrue(pp.isGranted(t, null, m.get(principal)));
         }
     }
