@@ -16,6 +16,7 @@
  */
 package org.apache.jackrabbit.oak.jcr.version;
 
+import java.util.HashSet;
 import java.util.Set;
 
 import javax.jcr.Node;
@@ -31,7 +32,6 @@ import javax.jcr.version.Version;
 import javax.jcr.version.VersionManager;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Sets;
 
 import org.apache.jackrabbit.test.AbstractJCRTest;
 import org.apache.jackrabbit.test.NotExecutableException;
@@ -160,7 +160,7 @@ public class VersionTest extends AbstractJCRTest {
         // Similar to above, the version is actually also referenced
         // from the rootVersion's jcr:successors property, but for
         // compatibility reasons it is not returned
-        Set<String> expected = ImmutableSet.of(
+        Set<String> expected = Set.of(
                 concat(n.getPath(), jcrBaseVersion)
         );
         assertEquals("references mismatch", expected, refs);
@@ -168,7 +168,7 @@ public class VersionTest extends AbstractJCRTest {
 
     private static Set<String> getReferencingPaths(Node n)
             throws RepositoryException {
-        Set<String> refs = Sets.newHashSet();
+        Set<String> refs = new HashSet<>();
         PropertyIterator it = n.getReferences();
         while (it.hasNext()) {
             refs.add(it.nextProperty().getPath());
