@@ -16,7 +16,6 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.plugins.index.lucene;
 
 import java.io.Closeable;
@@ -41,11 +40,10 @@ import javax.management.openmbean.TabularData;
 import javax.management.openmbean.TabularDataSupport;
 import javax.management.openmbean.TabularType;
 
-import org.apache.jackrabbit.guava.common.base.Function;
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.guava.common.collect.Sets;
 import org.apache.jackrabbit.guava.common.util.concurrent.Monitor;
 import org.apache.commons.io.FileUtils;
+import org.apache.jackrabbit.oak.commons.conditions.Validate;
 import org.apache.jackrabbit.oak.plugins.index.lucene.directory.CopyOnReadDirectory;
 import org.apache.jackrabbit.oak.plugins.index.lucene.directory.CopyOnWriteDirectory;
 import org.apache.jackrabbit.oak.plugins.index.lucene.directory.DirectoryUtils;
@@ -62,17 +60,15 @@ import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.apache.jackrabbit.guava.common.base.Preconditions.checkState;
 import static org.apache.jackrabbit.guava.common.collect.Iterables.toArray;
 import static org.apache.jackrabbit.guava.common.collect.Iterables.transform;
-import static org.apache.jackrabbit.guava.common.collect.Maps.newConcurrentMap;
 import static org.apache.jackrabbit.oak.commons.IOUtils.humanReadableByteCount;
 
 /**
  * Copies index files to/from the local disk and the datastore.
  */
 public class IndexCopier implements CopyOnReadStatsMBean, Closeable {
-    public static final Set<String> REMOTE_ONLY = ImmutableSet.of("segments.gen");
+    public static final Set<String> REMOTE_ONLY = Set.of("segments.gen");
     private static final int MAX_FAILURE_ENTRIES = 10000;
     private static final String WORK_DIR_NAME = "indexWriterDir";
 
@@ -102,8 +98,8 @@ public class IndexCopier implements CopyOnReadStatsMBean, Closeable {
 
     private final Monitor copyCompletionMonitor = new Monitor();
 
-    private final Map<String, String> indexPathVersionMapping = newConcurrentMap();
-    private final ConcurrentMap<String, LocalIndexFile> failedToDeleteFiles = newConcurrentMap();
+    private final Map<String, String> indexPathVersionMapping = new ConcurrentHashMap<>();
+    private final ConcurrentMap<String, LocalIndexFile> failedToDeleteFiles = new ConcurrentHashMap<>();
     private final Set<LocalIndexFile> copyInProgressFiles = Collections.newSetFromMap(new ConcurrentHashMap<LocalIndexFile, Boolean>());
     private final boolean prefetchEnabled;
     private volatile boolean closed;
@@ -248,7 +244,7 @@ public class IndexCopier implements CopyOnReadStatsMBean, Closeable {
     private static File initializerWorkDir(File indexRootDir) throws IOException {
         File workDir = new File(indexRootDir, WORK_DIR_NAME);
         FileUtils.deleteDirectory(workDir);
-        checkState(workDir.mkdirs(), "Cannot create directory %s", workDir);
+        Validate.checkState(workDir.mkdirs(), "Cannot create directory %s", workDir);
         return workDir;
     }
 
@@ -612,12 +608,7 @@ public class IndexCopier implements CopyOnReadStatsMBean, Closeable {
     @Override
     public String[] getGarbageDetails() {
         return toArray(transform(failedToDeleteFiles.values(),
-                new Function<LocalIndexFile, String>() {
-                    @Override
-                    public String apply(LocalIndexFile input) {
-                        return input.deleteLog();
-                    }
-                }), String.class);
+                input -> input.deleteLog()), String.class);
     }
 
     @Override
@@ -661,12 +652,7 @@ public class IndexCopier implements CopyOnReadStatsMBean, Closeable {
     @Override
     public String[] getCopyInProgressDetails() {
         return toArray(transform(copyInProgressFiles,
-                new Function<LocalIndexFile, String>() {
-                    @Override
-                    public String apply(LocalIndexFile input) {
-                        return input.copyLog();
-                    }
-                }), String.class);
+                input -> input.copyLog()), String.class);
     }
 
     @Override
