@@ -16,7 +16,6 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.run.cli;
 
 import java.lang.reflect.InvocationHandler;
@@ -24,7 +23,6 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
 import java.util.Set;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
 import org.apache.jackrabbit.oak.spi.blob.BlobStore;
 
 class ReadOnlyBlobStoreWrapper {
@@ -37,7 +35,7 @@ class ReadOnlyBlobStoreWrapper {
     }
 
     private static class ReadOnlyHandler implements InvocationHandler {
-        private final Set<String> writableMethods = ImmutableSet.of(
+        private final Set<String> writableMethods = Set.of(
                 "writeBlob",        //BlobStore
                 "deleteChunks",     //GarbageCollectableBlobStore
                 "countDeleteChunks" //GarbageCollectableBlobStore
