@@ -16,7 +16,6 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-
 package org.apache.jackrabbit.oak.segment.tool;
 
 import java.io.File;
@@ -24,10 +23,10 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.util.HashSet;
+import java.util.List;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.guava.common.collect.Lists;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.Consumer;
 import org.apache.commons.io.FileUtils;
 import org.apache.jackrabbit.oak.api.CommitFailedException;
@@ -72,27 +71,27 @@ public class CheckInvalidRepositoryTest extends CheckRepositoryTestBase {
     @Test
     public void testInvalidRevisionFallbackOnValid() {
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/"))
+            .withFilterPaths(Set.of("/"))
         );
 
         assertCheckSucceeded(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Checked 7 nodes and 21 properties", "Path / is consistent",
+        assertExpectedOutput(log.outString(), List.of("Checked 7 nodes and 21 properties", "Path / is consistent",
             "Searched through 2 revisions"));
 
         // not sure whether first traversal will fail because of "/a" or "/z"
-        assertExpectedOutput(log.errString(), Lists.newArrayList("Error while traversing /"));
+        assertExpectedOutput(log.errString(), List.of("Error while traversing /"));
     }
 
     @Test
     public void testPartialBrokenPathWithoutValidRevision() {
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/z"))
+            .withFilterPaths(Set.of("/z"))
         );
 
         assertCheckFailed(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Checking head", "Checking checkpoints", "No good revision found"));
+        assertExpectedOutput(log.outString(), List.of("Checking head", "Checking checkpoints", "No good revision found"));
         assertExpectedOutput(log.errString(),
-            Lists.newArrayList(
+            List.of(
                 "Error while traversing /z: java.lang.IllegalArgumentException: Segment reference out of bounds",
                 "Path /z not found"));
     }
@@ -100,27 +99,27 @@ public class CheckInvalidRepositoryTest extends CheckRepositoryTestBase {
     @Test
     public void testPartialBrokenPathWithValidRevision() {
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/a"))
+            .withFilterPaths(Set.of("/a"))
             .withCheckpoints(new HashSet<>())
         );
 
         assertCheckSucceeded(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Checked 1 nodes and 1 properties", "Path /a is consistent",
+        assertExpectedOutput(log.outString(), List.of("Checked 1 nodes and 1 properties", "Path /a is consistent",
             "Searched through 2 revisions"));
-        assertExpectedOutput(log.errString(), Lists.newArrayList(
+        assertExpectedOutput(log.errString(), List.of(
             "Error while traversing /a: java.lang.IllegalArgumentException: Segment reference out of bounds"));
     }
 
     @Test
     public void testCorruptHeadWithValidCheckpoints() {
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/"))
+            .withFilterPaths(Set.of("/"))
         );
 
         assertCheckSucceeded(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Checking head", "Checking checkpoints",
+        assertExpectedOutput(log.outString(), List.of("Checking head", "Checking checkpoints",
             "Checked 7 nodes and 21 properties", "Path / is consistent", "Searched through 2 revisions and 2 checkpoints"));
-        assertExpectedOutput(log.errString(), Lists.newArrayList(
+        assertExpectedOutput(log.errString(), List.of(
             "Error while traversing /a: java.lang.IllegalArgumentException: Segment reference out of bounds"));
     }
 
@@ -129,13 +128,13 @@ public class CheckInvalidRepositoryTest extends CheckRepositoryTestBase {
         corruptPathFromCheckpoint();
 
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/b"))
-            .withCheckpoints(ImmutableSet.of(checkpoints.iterator().next()))
+            .withFilterPaths(Set.of("/b"))
+            .withCheckpoints(Set.of(checkpoints.iterator().next()))
         );
 
         assertCheckFailed(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Searched through 2 revisions and 1 checkpoints", "No good revision found"));
-        assertExpectedOutput(log.errString(), Lists.newArrayList(
+        assertExpectedOutput(log.outString(), List.of("Searched through 2 revisions and 1 checkpoints", "No good revision found"));
+        assertExpectedOutput(log.errString(), List.of(
             "Error while traversing /b: java.lang.IllegalArgumentException: Segment reference out of bounds"));
     }
 
@@ -157,35 +156,35 @@ public class CheckInvalidRepositoryTest extends CheckRepositoryTestBase {
         int checkResult = check(b -> b
             .withPath(segmentStoreFolder)
             .withJournal(largeJournalFile)
-            .withFilterPaths(ImmutableSet.of("/"))
+            .withFilterPaths(Set.of("/"))
         );
 
         assertCheckFailed(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("No good revision found"));
+        assertExpectedOutput(log.outString(), List.of("No good revision found"));
     }
 
     @Test
     public void testFailFast_withInvalidHead() {
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/"))
+            .withFilterPaths(Set.of("/"))
             .withFailFast(true)
         );
 
         assertCheckFailed(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Searched through 1 revisions and 2 checkpoints", "No good revision found"));
+        assertExpectedOutput(log.outString(), List.of("Searched through 1 revisions and 2 checkpoints", "No good revision found"));
     }
 
     @Test
     public void testFailFast_withInvalidCheckpoints() {
         int checkResult = check(b -> b
-            .withFilterPaths(ImmutableSet.of("/b"))
-            .withCheckpoints(ImmutableSet.of("invalid-checkpoint-id"))
+            .withFilterPaths(Set.of("/b"))
+            .withCheckpoints(Set.of("invalid-checkpoint-id"))
             .withFailFast(true)
         );
 
         assertCheckFailed(checkResult);
-        assertExpectedOutput(log.outString(), Lists.newArrayList("Path /b is consistent", "No good revision found"));
-        assertExpectedOutput(log.errString(), Lists.newArrayList("Checkpoint invalid-checkpoint-id not found in this revision!"));
+        assertExpectedOutput(log.outString(), List.of("Path /b is consistent", "No good revision found"));
+        assertExpectedOutput(log.errString(), List.of("Checkpoint invalid-checkpoint-id not found in this revision!"));
     }
 
     @Test
@@ -234,7 +233,7 @@ public class CheckInvalidRepositoryTest extends CheckRepositoryTestBase {
     private ConsistencyCheckResult checkConsistency(MockReadOnlyFileStore store, File journalFile, boolean failFast) throws IOException {
         return new ConsistencyChecker().checkConsistency(
             store, new JournalReader(new LocalJournalFile(journalFile)),
-            true, checkpoints, ImmutableSet.of("/b"), true, Integer.MAX_VALUE,
+            true, checkpoints, Set.of("/b"), true, Integer.MAX_VALUE,
             failFast);
     }
 
