@@ -19,7 +19,6 @@
 
 package org.apache.jackrabbit.oak.spi.commit;
 
-import static org.apache.jackrabbit.guava.common.collect.Sets.newHashSet;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
@@ -27,12 +26,10 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.io.Closeable;
+import java.util.HashSet;
 import java.util.Set;
 
 import org.apache.jackrabbit.guava.common.collect.ImmutableSet;
-import org.apache.jackrabbit.oak.spi.commit.Observable;
-import org.apache.jackrabbit.oak.spi.commit.Observer;
-import org.apache.jackrabbit.oak.spi.commit.ObserverTracker;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -40,7 +37,7 @@ import org.osgi.framework.BundleContext;
 import org.osgi.framework.ServiceReference;
 
 public class ObserverTrackerTest {
-    private final Set<Observer> observers = newHashSet();
+    private final Set<Observer> observers = new HashSet<>();
 
     private final Observable observable = new Observable() {
         @Override
@@ -80,13 +77,13 @@ public class ObserverTrackerTest {
     @Test
     public void registerUnregister() {
         tracker.addingService(ref1);
-        assertEquals(ImmutableSet.of(observer1), observers);
+        assertEquals(Set.of(observer1), observers);
 
         tracker.addingService(ref2);
-        assertEquals(ImmutableSet.of(observer1, observer2), observers);
+        assertEquals(Set.of(observer1, observer2), observers);
 
         tracker.removedService(ref1, null);
-        assertEquals(ImmutableSet.of(observer2), observers);
+        assertEquals(Set.of(observer2), observers);
 
         tracker.removedService(ref2, null);
         assertTrue(observers.isEmpty());
@@ -95,11 +92,11 @@ public class ObserverTrackerTest {
     @Test
     public void registerTwice() {
         tracker.addingService(ref1);
-        assertEquals(ImmutableSet.of(observer1), observers);
+        assertEquals(Set.of(observer1), observers);
 
         // Adding an already added service should have no effect
         tracker.addingService(ref1);
-        assertEquals(ImmutableSet.of(observer1), observers);
+        assertEquals(Set.of(observer1), observers);
     }
 
     @Test
@@ -111,7 +108,7 @@ public class ObserverTrackerTest {
     @Test
     public void unregisterTwice() {
         tracker.addingService(ref1);
-        assertEquals(ImmutableSet.of(observer1), observers);
+        assertEquals(Set.of(observer1), observers);
 
         tracker.removedService(ref1, null);
         assertTrue(observers.isEmpty());
